...
            IconButton(
              icon: const Icon(Icons.delete, color: Colors.white),
              onPressed: () async {
                await DialogUtils.showConfirm(
                  title: "确认删除",
                  message: "确定要删除这张图片吗?",
                  confirmText: "确认",
                  cancelText: "取消",
                  onConfirm: () async {
                    if (articleId != null) {
                      await ref
                          .read(
                            articleDetailControllerProvider(
...
